plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

bootRun {
    jvmArgs = ['-Dfile.encoding=UTF-8']
}


dependencies {
	// Spring Boot Core and Web
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	// Actuator for monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Micrometer CloudWatch メトリクスエクスポート
	implementation 'io.micrometer:micrometer-registry-cloudwatch2'

	// AOP（リクエスト処理時間計測）
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// WebSocket接続・設定用
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	
	// Validation
	 implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Security: Cognito JWT検証用
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	
	// JWT（id_token）のデコードするためのライブラリ
	implementation 'com.nimbusds:nimbus-jose-jwt:9.38'
	
	// Database Drivers
	runtimeOnly 'com.mysql:mysql-connector-j'

	// AWS SDK for Java (v2) - S3, Lambda, DynamoDB, Cognito操作用
	// AWS SDKのバージョン管理をSpring Cloud AWSに任せる方法もありますが、今回は手動で追加します。
	implementation enforcedPlatform('software.amazon.awssdk:bom:2.31.78') // SDK v2のバージョン管理を有効化（全モジュールのバージョンを統一）
	
	// DynamoDB (メッセージログ、接続ID管理)
	implementation 'software.amazon.awssdk:dynamodb'
	
	// Lambda (Notifier起動、Bedrock連携の呼び出し)
	implementation 'software.amazon.awssdk:lambda'
	
	// S3 (アイコンなどのファイルストレージ用)
	implementation 'software.amazon.awssdk:s3'
	
	// Cognito
	implementation 'software.amazon.awssdk:cognitoidentityprovider'
	implementation 'software.amazon.awssdk:auth'
	
	// Bedrock (AIチャット用)
	implementation 'software.amazon.awssdk:bedrockruntime'
	
	// Httpクライアント
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// 補足: CognitoのJWT検証に必要な公開鍵の自動取得は
	// Spring Security OAuth2 Resource Serverが標準で処理するため、
	// Cognito Identity Providerのクライアントは通常不要です。

	// Developer Tools and Lombok
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}